# tdrip

./: Cargo.toml  LICENSE  README.md  example.txt
.github/workflows/: ci.yml
src/: main.rs
